--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 Flask==0.8
+Flask-SQLAlchemy==0.16
 Jinja2==2.6
+SQLAlchemy==0.7.7
 Werkzeug==0.8.3
 certifi==0.0.8
 chardet==1.0.1
-distribute==0.6.24
+distribute==0.6.27
 ipython==0.12.1
 oauthlib==0.1.3
 pyasn1==0.1.3
-requests==0.13.0
+requests==0.13.1
 rsa==3.0.1
 wsgiref==0.1.2
