--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-Flask==0.8
+Flask==0.9
 Flask-SQLAlchemy==0.16
 Jinja2==2.6
-SQLAlchemy==0.7.7
+Mako==0.7.1
+MarkupSafe==0.15
+SQLAlchemy==0.7.8
 Werkzeug==0.8.3
-certifi==0.0.8
-chardet==1.0.1
+alembic==0.3.5
 distribute==0.6.27
-ipython==0.12.1
-oauthlib==0.1.3
-pyasn1==0.1.3
-requests==0.13.1
-rsa==3.0.1
+ipython==0.13
+psycopg2==2.4.5
+requests==0.13.2
 wsgiref==0.1.2
